--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,152 @@
     <link rel="stylesheet" href="../static/styles/main.css">
 </head>
 <body>
-    <header></header>
-    <main>
-        <div>
-            hello,world!
+    <header class="header sticky">
+        <div class="container">
+            <div class="header__logo">
+                <img src="../static/images/svg/logo.svg" alt="">
+            </div>
+            <div class="header__btn-block">
+                <a class="btn blue">Войти</a>
+            </div>
         </div>
+    </header>
+    <main>
+        <section>
+            <div class="hero-section default-margin">
+                <div class="hero-block">
+                    <div class="container">
+                        <div class="title-block">
+                            <h1 class="title">Инновационная платформа для HR-ориентированных решений</h1>
+                            <div class="desc">Оптимизируйте процесс управления человеческими ресурсами с помощью нашей многофункциональной платформы. Мы предлагаем инструменты для подбора, обучения и развития сотрудников, а также аналитику для улучшения корпоративной культуры. Упрощайте работу вашего HR-отдела и создавайте сильную команду уже сегодня!</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="about-section default-margin">
+                <div class="about-block">
+                    <div class="container">
+                        <div class="text-block">
+                            <div class="title">Статистика и аналитика - важные составляющие работы HR-специалиста</div>
+                            <div class="text">Аналитика данных компании помогает выбирать правильную стратегию развития и работы. Мы понимаем, как HR-специалисту важно быть в курсе всех событий. Поэтому мы автоматизировали этот процесс, добавив раздел статистики в Hurma. Система автоматически собирает данные и формирует графики и диаграммы. Вам остается только выбрать нужный период, посмотреть и проанализировать результаты.</div>
+                        </div>
+                        <div class="text">Так как все сотрудники и кандидаты находятся в одной системе, Hurma автоматически собирает статистику по HR, рекрутингу и настроению. Вам больше не нужно вести множество разных таблиц или экспортировать данные из разных сервисов, ведь вся статистика доступна в системе. Вам достаточно зайти в соответствующий раздел и выбрать период, за который вы хотите увидеть статистику. Все остальное произойдет автоматически.</div>
+                        <div class="btn-block">
+                            <div class="title">Автоматический сбор статистики – лучшее, что может случиться с вашими HR-процессами</div>
+                            <div class="btn blue small">Подключиться</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="info-section">
+                <div class="info-block default-margin">
+                    <div class="container">
+                        <div class="img"><img src="../static/images/GifPlug.png" alt=""></div>
+                        <div class="text">
+                            <div class="title">Умный подбор персонала</div>
+                            <div class="desc">Наша платформа использует передовые технологии, чтобы упростить процесс подбора кандидатов. Получите доступ к интеллектуальным алгоритмам, которые помогают быстро находить и оценивать лучших кандидатов, а также автоматизировать повторяющиеся задачи, позволяя HR-специалистам сосредоточиться на стратегических инициативах.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="info-section">
+                <div class="info-block default-margin">
+                    <div class="container">
+                        <div class="text">
+                            <div class="title">Аналитика и оптимизация HR-процессов</div>
+                            <div class="desc">Используйте мощные инструменты аналитики для оценки эффективности процессов управления персоналом. Наша платформа предоставляет глубокие аналитические отчеты, которые помогают выявлять слабые места, отслеживать производительность сотрудников и принимать обоснованные решения для улучшения корпоративной культуры и повышения вовлеченности команды.</div>
+                        </div>
+                        <div class="img"><img src="../static/images/GifPlug.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="info-section">
+                <div class="info-block default-margin">
+                    <div class="container">
+                        <div class="img"><img src="../static/images/GifPlug.png" alt=""></div>
+                        <div class="text">
+                            <div class="title">Умный подбор персонала</div>
+                            <div class="desc">Наша платформа использует передовые технологии, чтобы упростить процесс подбора кандидатов. Получите доступ к интеллектуальным алгоритмам, которые помогают быстро находить и оценивать лучших кандидатов, а также автоматизировать повторяющиеся задачи, позволяя HR-специалистам сосредоточиться на стратегических инициативах.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="info-section">
+                <div class="info-block default-margin gray">
+                    <div class="container">
+                        <div class="img"><img src="../static/images/GifPlug-red.png" alt=""></div>
+                        <div class="btn-block">
+                            <div class="title">Тратьте время с пользой!</div>
+                            <a href="#!" class="btn blue small">Подключиться</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="info-section">
+                <div class="info-block default-margin">
+                    <div class="container">
+                        <div class="img"><img src="../static/images/GifPlug-red.png" alt=""></div>
+                        <div class="list">
+                            <div class="title">Преимущества</div>
+                            <ul>
+                                <li>данные собираются автоматически;</li>
+                                <li>HR, рекрутинг и настроение в одном разделе;</li>
+                                <li>можно смотреть статистику за разное время;</li>
+                                <li>понятные диаграммы и графики;</li>
+                                <li>детальная статистика по рекрутингу;</li>
+                                <li>статистика по настроению с комментариями;</li>
+                                <li>статистика по текучести кадров.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="description-section">
+                <div class="description-block default-margin">
+                    <div class="container">
+                        <div class="text">
+                            <div class="title">Вся статистика в одной системе</div>
+                            <div class="desc">Аналитика – один из важных аспектов работы HR и рекрутера. Чтобы понять, работает ли новая стратегия по повышению лояльности, нужно собрать статистику. Чтобы понять, как работают новые методы по снижению текучести, нужно собрать статистику. Чтобы понять, какой канал рекрутинга самый эффективный, снова нужно собрать статистику. И у HR-менеджера, и у рекрутера достаточно много ежедневных задач, поэтому на сбор статистики и аналитику данных часто попросту нет времени.</div>
+                            <div class="toggle-btn btn" id="toggleButton">Развернуть</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
-    <script src="../static/scripts/script.js"></script>
+    <footer class="footer">
+        <div class="container">
+             <div class="copyright">
+                 ©2023 Копировать информацию с сайта запрещено
+            </div>
+        <div class="links">
+            <a href="#!">
+                <img src="../static/images/svg/basil_vk-outline.svg" alt="">
+            </a>
+            <a href="#!">
+                <img src="../static/images/svg/ion_social-twitch-outline.svg" alt="">
+            </a>
+            <a href="#!">
+                <img src="../static/images/svg/ri_twitter-line.svg" alt="">
+            </a>
+        </div>
+        </div>
+       
+    </footer>
+    <script type="module" src="../static/scripts/script.js"></script>
 </body>
 </html>
