--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <img src="../static/images/svg/logo.svg" alt="">
             </div>
             <div class="header__btn-block">
-                <a class="btn blue">Войти</a>
+                <a class="btn blue" href="./form.html">Войти</a>
             </div>
         </div>
     </header>
