--- a/static/styles/base/kit.scss
+++ b/static/styles/base/kit.scss
@@ -34,6 +34,14 @@ $text-blue-light: #1E3A8A;
         font-size: 20px;
       }
 }
+@mixin heading_4 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 120%;
+    @media screen and (max-width: 768px) {
+        font-size: 18px;
+      }
+}
 @mixin subtitle {
     font-weight: 400;
     line-height: 120%;
