--- a/static/styles/elements/button.scss
+++ b/static/styles/elements/button.scss
@@ -14,6 +14,15 @@
             background: linear-gradient(270deg, rgb(30, 64, 175) 0%, rgb(37, 99, 235) 47%, rgb(96, 165, 250) 100%);
         }
     }
+    &.black {
+        background-color: $bg-secondary-dark;
+        &.small {
+            padding: 8px 92px;
+        }
+        &:hover {
+            background-color: $bg-primary-dark;
+        }
+    }
     @media screen and (max-width: 768px) {
          padding: 15px 50px;       
     }
