--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -104,6 +104,11 @@ table {
   transition: top 0.3s;
   background-color: #18181B;
 }
+.header.transparent {
+  background-color: transparent;
+  justify-content: start;
+  padding-left: 32px;
+}
 .header .container {
   display: flex;
   justify-content: space-between;
@@ -181,10 +186,109 @@ table {
 .btn.blue:hover {
   background: linear-gradient(270deg, rgb(30, 64, 175) 0%, rgb(37, 99, 235) 47%, rgb(96, 165, 250) 100%);
 }
+.btn.black {
+  background-color: #27272A;
+}
+.btn.black.small {
+  padding: 8px 92px;
+}
+.btn.black:hover {
+  background-color: #18181B;
+}
 @media screen and (max-width: 768px) {
   .btn {
     padding: 15px 50px;
   }
+}
+
+.reg {
+  gap: 24px;
+  padding: 48px;
+  display: flex;
+  border-radius: 48px;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  background-color: #F4F4F5;
+  box-shadow: -15px 15px 30px 20px rgba(0, 0, 0, 0.1);
+}
+@media screen and (max-width: 375px) {
+  .reg {
+    padding: 24px;
+    border-radius: 24px;
+  }
+}
+.reg .text1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 320px;
+  text-align: center;
+  width: 100%;
+}
+.reg .text1 h1 {
+  font-size: 21px;
+}
+.reg .google {
+  gap: 8px;
+  color: #0d0d0d;
+  border-radius: 8px;
+  padding: 8px 22px;
+  background-color: #E3E3E3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: 1px solid #A1A1AA;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+.reg .google:hover {
+  background-color: #D4D4D8;
+}
+.reg .btn {
+  padding: 12px 0px !important;
+  width: 100%;
+}
+.reg .click {
+  display: flex;
+  align-items: start;
+  gap: 12px;
+  width: 100%;
+}
+.reg .click input[type=checkbox i] {
+  width: 16px;
+  height: 16px;
+  border-radius: 1px solid #757575;
+  border-radius: 4px;
+  accent-color: #0d0d0d;
+}
+.reg .vosstanovka {
+  display: flex;
+  width: 100%;
+}
+.reg .vosstanovka a {
+  color: #1E1E1E;
+  text-align: start;
+}
+.reg .email,
+.reg .password {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 8px;
+}
+.reg .email input,
+.reg .password input {
+  border-radius: 8px;
+  border: 0;
+  outline: 1px solid #A1A1AA;
+  padding: 12px 16px;
+}
+.reg .email input::placeholder,
+.reg .password input::placeholder {
+  font-size: 16px;
+  font-weight: 500;
+  color: #B3B3B3;
 }
 
 .hero-section {
