--- a/static/styles/base/kit.scss
+++ b/static/styles/base/kit.scss
@@ -63,6 +63,7 @@ $text-blue-light: #1E3A8A;
     justify-content: center;
     align-items: center;
     font-size: 16px;
+    gap: 8px;
     width: fit-content;
     cursor: pointer;
 }
