--- a/static/styles/elements/button.scss
+++ b/static/styles/elements/button.scss
@@ -23,6 +23,26 @@
             background-color: $bg-primary-dark;
         }
     }
+    &.dark-black {
+        padding: 12px;
+        border-radius: 8px;
+        background-color: #18181B;
+        border: 1px solid #27272A;
+        &:hover {
+            background-color: #27272A;
+            
+        }
+    }
+    &.green {
+        padding: 16px 14px;
+        background-color: #BBF7D0;
+        border: 2px solid #15803D;
+        border-radius: 8px;
+        color: #15803D;
+        &:hover {
+            background-color: #86EFAC;
+        }
+    }
     @media screen and (max-width: 768px) {
          padding: 15px 50px;       
     }
