--- a/templates/form.html
+++ b/templates/form.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/main.css">
     <title>Авторизация</title>
+    <link rel="shortcut icon" href="../static/images/svg/favicon.svg" type="image/x-icon">
 </head>
 <body style="display: flex; height: 100vh; justify-content: center; align-items: center; background-color: #E4E4E7; padding: 0px 12px;">
     <header class="header sticky transparent">
         <div class="header__logo">
-            <img src="../static/images/svg/logo-dark.svg" alt="">
+            <a href="./index.html"><img src="../static/images/svg/logo-dark.svg" alt=""></a>
         </div>
     </header>
     <div class="reg">
