--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lavender</title>
     <link rel="stylesheet" href="../static/styles/main.css">
+    <link rel="shortcut icon" href="../static/images/svg/favicon.svg" type="image/x-icon">
 </head>
 <body>
     <header class="header sticky">
@@ -13,7 +14,12 @@
                 <img src="../static/images/svg/logo.svg" alt="">
             </div>
             <div class="header__btn-block">
-                <a class="btn blue" href="./form.html">Войти</a>
+                <a class="btn dark-black" href="./form.html">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13.3333 14V12.6667C13.3333 11.9594 13.0523 11.2811 12.5522 10.781C12.0521 10.281 11.3739 10 10.6666 10H5.33329C4.62605 10 3.94777 10.281 3.44767 10.781C2.94758 11.2811 2.66663 11.9594 2.66663 12.6667V14M10.6666 4.66667C10.6666 6.13943 9.47272 7.33333 7.99996 7.33333C6.5272 7.33333 5.33329 6.13943 5.33329 4.66667C5.33329 3.19391 6.5272 2 7.99996 2C9.47272 2 10.6666 3.19391 10.6666 4.66667Z" stroke="#F5F5F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>                        
+                    <span>Войти</span>
+                </a>
             </div>
         </div>
     </header>
@@ -41,7 +47,7 @@
                         <div class="text">Так как все сотрудники и кандидаты находятся в одной системе, Hurma автоматически собирает статистику по HR, рекрутингу и настроению. Вам больше не нужно вести множество разных таблиц или экспортировать данные из разных сервисов, ведь вся статистика доступна в системе. Вам достаточно зайти в соответствующий раздел и выбрать период, за который вы хотите увидеть статистику. Все остальное произойдет автоматически.</div>
                         <div class="btn-block">
                             <div class="title">Автоматический сбор статистики – лучшее, что может случиться с вашими HR-процессами</div>
-                            <div class="btn blue small">Подключиться</div>
+                            <div class="btn blue">Подключиться</div>
                         </div>
                     </div>
                 </div>
@@ -51,7 +57,7 @@
             <div class="info-section">
                 <div class="info-block default-margin">
                     <div class="container">
-                        <div class="img"><img src="../static/images/GifPlug.png" alt=""></div>
+                        <div class="img"><img src="../static/images/Diagram1.png" alt=""></div>
                         <div class="text">
                             <div class="title">Умный подбор персонала</div>
                             <div class="desc">Наша платформа использует передовые технологии, чтобы упростить процесс подбора кандидатов. Получите доступ к интеллектуальным алгоритмам, которые помогают быстро находить и оценивать лучших кандидатов, а также автоматизировать повторяющиеся задачи, позволяя HR-специалистам сосредоточиться на стратегических инициативах.</div>
@@ -68,7 +74,7 @@
                             <div class="title">Аналитика и оптимизация HR-процессов</div>
                             <div class="desc">Используйте мощные инструменты аналитики для оценки эффективности процессов управления персоналом. Наша платформа предоставляет глубокие аналитические отчеты, которые помогают выявлять слабые места, отслеживать производительность сотрудников и принимать обоснованные решения для улучшения корпоративной культуры и повышения вовлеченности команды.</div>
                         </div>
-                        <div class="img"><img src="../static/images/GifPlug.png" alt=""></div>
+                        <div class="img"><img src="../static/images/Diagram2.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -77,7 +83,7 @@
             <div class="info-section">
                 <div class="info-block default-margin">
                     <div class="container">
-                        <div class="img"><img src="../static/images/GifPlug.png" alt=""></div>
+                        <div class="img"><img src="../static/images/diagram3.png" alt=""></div>
                         <div class="text">
                             <div class="title">Умный подбор персонала</div>
                             <div class="desc">Наша платформа использует передовые технологии, чтобы упростить процесс подбора кандидатов. Получите доступ к интеллектуальным алгоритмам, которые помогают быстро находить и оценивать лучших кандидатов, а также автоматизировать повторяющиеся задачи, позволяя HR-специалистам сосредоточиться на стратегических инициативах.</div>
@@ -90,10 +96,10 @@
             <div class="info-section">
                 <div class="info-block default-margin gray">
                     <div class="container">
-                        <div class="img"><img src="../static/images/GifPlug-red.png" alt=""></div>
+                        <div class="img"><img src="../static/images/watch.png" alt=""></div>
                         <div class="btn-block">
                             <div class="title">Тратьте время с пользой!</div>
-                            <a href="#!" class="btn blue small">Подключиться</a>
+                            <a href="#!" class="btn blue">Подключиться</a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +109,7 @@
             <div class="info-section">
                 <div class="info-block default-margin">
                     <div class="container">
-                        <div class="img"><img src="../static/images/GifPlug-red.png" alt=""></div>
+                        <div class="img"><img src="../static/images/plus.png" alt=""></div>
                         <div class="list">
                             <div class="title">Преимущества</div>
                             <ul>
@@ -139,19 +145,18 @@
              <div class="copyright">
                  ©2023 Копировать информацию с сайта запрещено
             </div>
-        <div class="links">
-            <a href="#!">
-                <img src="../static/images/svg/basil_vk-outline.svg" alt="">
-            </a>
-            <a href="#!">
-                <img src="../static/images/svg/ion_social-twitch-outline.svg" alt="">
-            </a>
-            <a href="#!">
-                <img src="../static/images/svg/ri_twitter-line.svg" alt="">
-            </a>
+            <div class="links">
+                <a href="#!">
+                    <img src="../static/images/svg/basil_vk-outline.svg" alt="">
+                </a>
+                <a href="#!">
+                    <img src="../static/images/svg/ion_social-twitch-outline.svg" alt="">
+                </a>
+                <a href="#!">
+                    <img src="../static/images/svg/ri_twitter-line.svg" alt="">
+                </a>
+            </div>
         </div>
-        </div>
-       
     </footer>
     <script type="module" src="../static/scripts/script.js"></script>
 </body>
