--- a/static/styles/sections/hero-section.scss
+++ b/static/styles/sections/hero-section.scss
@@ -1,25 +1,34 @@
 .hero-section {
     background-color: $bg-secondary-dark;
-    margin-top: 100px;
+    height: 80vh;
+   
     @media screen and (max-width: 768px) {
         margin-top: 80px;
+        height: 50vh;
     }
-    .title-block {
+    .hero-block {
         display: flex;
-        flex-direction: column;
-        gap: 24px;
-        max-width: 800px;
-        width: 100%;
-        @media screen and (max-width: 375px) {
-            max-width: 350px;
-          }
-        .title {
-            color: $text-primary-dark;
-            @include heading_1;
-        }
-        .desc {
-            color: $text-tertiary-dark;
-            @include subtitle;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        .title-block {
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            max-width: 800px;
+            width: 100%;
+            @media screen and (max-width: 375px) {
+                max-width: 350px;
+              }
+            .title {
+                color: $text-primary-dark;
+                @include heading_1;
+            }
+            .desc {
+                color: $text-tertiary-dark;
+                @include subtitle;
+            }
         }
     }
+
 }
