--- a/static/styles/sections/main.scss
+++ b/static/styles/sections/main.scss
@@ -2,3 +2,4 @@
 @import './about-block-section.scss';
 @import './info-section.scss';
 @import './description-section.scss';
+@import './error-section.scss';
