start profile page

--- a/static/styles/base/base.scss
+++ b/static/styles/base/base.scss
@@ -18,6 +18,7 @@ time, mark, audio, video {
 
 body {
   font-family: "Inter", sans-serif;
+  background-color: #E4E4E7;
 }
 html {
   scrollbar-color: $text-blue-light;
