--- a/static/styles/sections/main.scss
+++ b/static/styles/sections/main.scss
@@ -3,3 +3,5 @@
 @import './info-section.scss';
 @import './description-section.scss';
 @import './error-section.scss';
+
+@import './profile-page/main.scss';
