--- a/templates/form.html
+++ b/templates/form.html
@@ -33,7 +33,7 @@
             <input type="checkbox" checked="checked">
             <p>Запомни меня</p>
         </div>
-        <a class="btn black small" href="">
+        <a class="btn black small" href="./profile.html">
             <p>Войти</p>
         </a> 
         <div class="vosstanovka">
